# qdw26-workshop-materials

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  UPSTREAMS.md  compose.yaml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: workshop-materials.md
.github/workflows/: ci.yml  docker-smoke.yml  nightly-smoke.yml  publish-image.yml
docs/: access.md  brev.md  deployment-security.md  environment.md  gui-forwarding.md  upstream-qdw26-playground-README.md  workshop-lead-guide.md
palace_examples/sqdmetal/: 2_transmons_wRes_comp.ipynb
scripts/: brev-clone-and-setup.sh  brev-setup.sh  check_notebooks.py  smoke_environment.py  validate_workshops.py
shared/palace_examples/spheres/: spheres.json
shared/palace_examples/transmon/: transmon_coarse.json
workshops/: README.md
workshops/quantum-device-design/: README.md  workshop.yaml
workshops/quantum-device-design/binder/: postBuild
workshops/quantum-device-design/notebooks/: 01_welcome.ipynb  02_first_chip_layout.ipynb  03_transmon_and_resonator.ipynb  04_qubit_qubit_coupling.ipynb  05_project.ipynb  project.ipynb
workshops/quantum-device-design/notebooks/solutions/: 05_project_layout.ipynb  05_project_solution_simulations.ipynb
workshops/quantum-device-design/references/: README.md
workshops/tutorials_quantum_device_design/: README.MD  project.ipynb  qubit_qubit_coupling.ipynb  transmon_resonator.ipynb
workshops/tutorials_quantum_device_design/binder/: Dockerfile  apt.txt  environment.yml  manual_install.sh
