[project]
name = "qdw-workshop-materials"
version = "0.1.0"
description = "Shared workshop environment for Quantum Device Workshop materials"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "jupyter>=1.1.1",
    "quantum-metal",
    "sqdmetal",
]

[tool.uv.sources]
sqdmetal = { git = "https://github.com/sqdlab/SQDMetal.git" }
quantum-metal = { git = "https://github.com/abhishekchak52/qiskit-metal.git", branch = "gui-import-isolation"}
