[project]
name = "qdw-workshop-materials"
version = "0.1.0"
description = "Shared workshop environment for Quantum Device Workshop materials"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "django>=5.2.14",
    "idna>=3.15",
    "jupyter>=1.1.1",
    "jupyter-server>=2.18.0",
    "jupyterlab>=4.5.7",
    "klayout>=0.30.4",
    "meshwell>=2.3.6",
    "mistune>=3.2.1",
    "nbconvert>=7.17.1",
    "notebook>=7.5.6",
    "pypalace>=0.1.0",
    "quantum-metal[full]>=0.7.3",
    "schemdraw>=0.21",
    "scikit-rf>=1.8.0",
    "scqubits>=4.3.1",
    "sqdmetal",
    "squadds>=0.3.6",
    "urllib3>=2.7.0",
]

[tool.uv.sources]
sqdmetal = { git = "https://github.com/sqdlab/SQDMetal.git" }
# quantum-metal floor: v0.7.3 (released Jun 2026). Pulls in:
#   - v0.7.0: lite-by-default install (Qt, Ansys, gmsh now opt-in extras).
#   - v0.7.1: friendly missing-dep errors, [mesh] alias, docs polish.
#   - v0.7.2: qm.gui(design) factory (auto-picks MetalGUI vs MetalGUIHeadless
#     based on the environment), MetalGUIHeadless inline matplotlib viewer
#     with the full tutorial-facing API, QComponent gallery, tutorial
#     restructure (1.1 Quick start first).
#   - v0.7.3: qm.show_inline(fig) backend-agnostic display helper
#     (handles Qt6Agg → inline rendering in Jupyter), PlotCanvas.zoom_on_components
#     bug fix (double-click in QComponents table no longer crashes),
#     gui.highlight_components Qt-mode visibility fix (canvas.refresh now
#     double-flushes through draw_idle so annotations show on first call).
#     All required by the workshop notebooks here.
# No upper bound — attendees pick up future v0.7.x patches automatically.
